# processor-creative-kit

./: LICENSE  README.md  TODO.txt  changelog.md  processor-creative-kit.cabal  todo.md
Language/Pck/: Cpu.hs  Tool.hs
Language/Pck/Cpu/: Config.hs  Execution.hs  Instruction.hs  Memory.hs  Register.hs  State.hs
Language/Pck/Tool/: Assembler.hs  Debugger.hs  InteractiveDebugger.hs  Profiler.hs
Processor/: Tool.hs
Processor/Core/: Execution.hs  Instruction.hs  Memory.hs  Register.hs  State.hs
Processor/Tool/: Assembler.hs  Debugger.hs  InteractiveDebugger.hs  Profiler.hs  x.gdb.msg
docs/: 1_HowToUseAPI.md  2_HowToCreate.md
examples/: as.hs  break.hs  idb.hs  idb2.hs  prof.hs  run.hs  test0.asm  test1.asm  test2.asm  test3.asm  test4.asm  test5.asm  test6.asm  trace.hs  trace2.hs
tests/: hunit.hs
