
name:                processor-creative-kit
version:             0.1.0.0
synopsis:            processor-creative-kit
description:         you can create your processor.
license:             BSD3
license-file:        LICENSE
author:              Takenobu T
maintainer:          takenobu.hs@gmail.com
-- copyright:        Takenobu T
category:            Processor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Processor.Core
                     Processor.Core.Instruction
                     Processor.Core.Config
                     Processor.Core.Execution
                     Processor.Core.State
                     Processor.Core.Register
                     Processor.Core.Memory
                     Processor.Tool
                     Processor.Tool.Assembler
                     Processor.Tool.Debugger
                     Processor.Tool.InteractiveDebugger
                     Processor.Tool.Profiler
  -- other-modules:       
  other-extensions:  OverloadedStrings
  build-depends:     base >=4.7 && <4.8,
                     bytestring >=0.10 && <0.11,
                     containers >=0.5 && <0.6,
                     mtl >=2.1 && <2.2,
                     split >=0.2 && <0.3,
                     array >=0.5 && <0.6,
                     attoparsec >=0.10 && <0.11
  -- hs-source-dirs:      
  default-language:  Haskell2010


-- Test-suite doctest
--   type:              exitcode-stdio-1.0
--   default-language:  Haskell2010
--   hs-source-dirs:    tests
--   main-is:           doctests.hs
--   build-depends:     base,
--                      doctest >= 0.9.3

-- Test-suite hspec
--   type:              exitcode-stdio-1.0
--   default-language:  Haskell2010
--   hs-source-dirs:    tests
--   main-is:           hspec.hs
--   build-depends:     base,
--                      hspec >= 1.3,
-- --                   QuickCheck,
--                      bytestring >=0.10 && <0.11,
--                      haskell-pck

Test-suite hunit
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    tests
  main-is:           hunit.hs
  build-depends:     base,
                     HUnit >= 1.2,
                     bytestring >=0.10 && <0.11,
                     processor-creative-kit

