name:                processor-creative-kit
version:             0.0.1.0
synopsis:            processor-creative-kit
description:         you can create your processor.
homepage:            https://github.com/takenobu-hs/processor-creative-kit
license:             BSD3
license-file:        LICENSE
author:              Takenobu Tani
maintainer:          takenobu.hs@gmail.com
copyright:           Takenobu Tani
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/takenobu-hs/processor-creative-kit.git

library
  exposed-modules:   Language.Pck.Cpu
                     Language.Pck.Cpu.Instruction
                     Language.Pck.Cpu.Config
                     Language.Pck.Cpu.Execution
                     Language.Pck.Cpu.State
                     Language.Pck.Cpu.Register
                     Language.Pck.Cpu.Memory
                     Language.Pck.Tool
                     Language.Pck.Tool.Assembler
                     Language.Pck.Tool.Debugger
                     Language.Pck.Tool.InteractiveDebugger
                     Language.Pck.Tool.Profiler
  -- other-modules:       
  other-extensions:  OverloadedStrings
  build-depends:     base >=4.7 && <4.8,
                     bytestring >=0.10 && <0.11,
                     containers >=0.5 && <0.6,
                     mtl >=2.1 && <2.2,
                     split >=0.2 && <0.3,
                     array >=0.5 && <0.6,
                     attoparsec >=0.10 && <0.11
  -- hs-source-dirs:      
  default-language:  Haskell2010


-- Test-suite hunit
--   type:              exitcode-stdio-1.0
--   default-language:  Haskell2010
--   hs-source-dirs:    tests
--   main-is:           hunit.hs
--   build-depends:     base,
--                      HUnit >= 1.2,
--                      bytestring >=0.10 && <0.11,
--                      processor-creative-kit

